--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 
+title: 知否知否
 email: yapeng.zhang.work@foxmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  建设中.
+  应是绿肥红瘦.
 baseurl: "test_blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  zyyyyp
